# pulse-flow

./: .env  .gitignore  LICENSE  README.md  get_lib_version.py  get_project_structure.py  main.py  pyproject.toml  requirements.txt  scrapper_ui.py  versions.py
prod_assistant/: cli.py
prod_assistant/config/: config.yaml  config_base.yaml  config_dev.yaml  config_prod.yaml
prod_assistant/core/: bootstrap.py  globals.py  logger.py  trace.py
prod_assistant/etl/: data_ingestion.py  data_scrapper.py
prod_assistant/evaluation/: ragas_eval.py
prod_assistant/exception/: custom_exception.py
prod_assistant/logger/: __init__.py  custom_logger.py
prod_assistant/mcp_servers/: client.py  product_search_server.py
prod_assistant/prompt_library/: prompts.py
prod_assistant/retriever/: retrieval.py
prod_assistant/router/: main.py
prod_assistant/utils/: api_key_manager.py  config_loader.py  model_loader.py
prod_assistant/workflow/: agentic_rag_workflow.py  agentic_workflow_with_mcp.py  agentic_workflow_with_mcp_websearch.py  client.py  product_search_server.py
templetes/: index.html
